# collegecounsellorAI

./: .replit  DesignReadme.md  README.md  main.py  pyproject.toml  replit.nix  setup.py
.streamlit/: config.toml
agents/: README.md  base.py  counselor.py  orchestrator.py  primary_counselor.py  strategic_planning.py  validator.py
attached_assets/: Pasted--1-National-History-Academy-Summer-Program-Description-This-program-allows-high-school-s-1735928053444.txt  Pasted--External-LLM-Configuration-System-Configuration-Structure-1-Main-Configuration-File-co-1735854158129.txt  Pasted--System-Overview-The-system-will-use-a-multi-agent-architecture-where-each-agent-specializes-in-s-1735851694015.txt  Pasted--streamlit-errors-StreamlitAPIException-Using-st-query-params-together-with-either-st-experimental-1735864981910.txt  Pasted-1-Hero-Section-Coco-s-Avatar-Use-an-animated-avatar-that-responds-to-user-actions-e-1735947385815.txt  Pasted-2025-01-03-06-25-15-836-models-achievement-INFO-Default-achievements-initialized-successfully--1735885542408.txt  Pasted-Exploring-interesting-courses-in-accounting-can-help-you-gain-a-stronger-foundation-in-the-field-wh-1735863636064.txt  Pasted-High-Level-System-Design-Conversational-Agent-The-core-of-the-system-is-an-LLM-based--1735857192006.txt  Pasted-The-issue-lies-in-the-way-you-re-splitting-the-content-into-parts-The-regular-expression-actiona-1735927732493.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-CollegeCounselorAI-agents-base-py-line-118-1735855823678.txt  (+2 more)
calendar/: readme.md
components/: README.md  auth.py  (+10 more)
(+35 files in other folders)
