[project]
name = "repl-nix-collegecounselorai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.41.1",
    "openai>=1.58.1",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "icalendar>=6.1.0",
    "pytz>=2024.2",
    "langchain-openai>=0.2.14",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.4",
    "anthropic>=0.42.0",
    "pytest>=8.3.4",
    "toml>=0.10.2",
]
